k8s/todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  namespace: springboot-kubernetes
spec:
  type: NodePort
  selector:
    app: todo-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  namespace: springboot-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-api-pod
  template:
    metadata:
      labels:
        app: todo-api-pod
    spec:
      containers:
        - name: todo
          image: harrishjoshi/todo-api
          ports:
            - containerPort: 8080
