k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-ingress
  namespace: springboot-kubernetes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - pathType: ImplementationSpecific
          path: /todo-api(/|$)(.*)
          backend:
            service:
              name: todo-api-svc
              port:
                number: 8080
