k8s/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-ingress
  namespace: springboot-kubernetes
spec:
  rules:
    - http:
          paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-ui-svc
                port:
                  number: 3000
